--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@
   border: 2px solid gray;
   background-color: rgb(214, 214, 214);
   border-radius: 10px;
+  margin-bottom: 100px;
 }
 
 .taskEmoji,
