--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+  margin: 50px 0;
+}
+
 .emojis {
   position: absolute;
   opacity: 0;
@@ -14,7 +18,6 @@
   border: 2px solid gray;
   background-color: rgb(214, 214, 214);
   border-radius: 10px;
-  margin-bottom: 100px;
 }
 
 .taskEmoji,
